--- a/src/assets/css/responsive.css
+++ b/src/assets/css/responsive.css
@@ -315,6 +315,15 @@
     .featured-vehicles-wrap .sm-title {
         text-align: center;
     }
+    
+    .video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 25px;
+        height: 100%;
+        width: 309%;
+        margin-left: -80%;
+    }
 }
 @media(max-width: 992px) {  
     .service-box {
@@ -423,7 +432,7 @@
         width: 100% !important;
     }
     .about-left img {
-        height: 220px !important;
+        height: 45vh !important;
         width: 100%;
         object-fit: cover;
     }
@@ -434,8 +443,8 @@
         font-size: 3em;
     }
     .hd-pos span.px-5 {
-        padding-right: 1.5rem !important;
-        padding-left: 1.5rem !important;
+        padding-right: 1rem !important;
+        padding-left: 1rem !important;
     }
     .about-right {
         padding: 25px 35px;
@@ -521,6 +530,26 @@
     .about-right .btn-black-theme {
         width: 100%;
         display: block !important;
+    }
+    .logos-wrap:before,
+    .logos-wrap:after {
+        width: 70px;
+    }
+    .service-box .service-pos span:after {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+    .video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 25px;
+        height: 120%;
+        width: 479%;
+        margin-left: -160%;
+    }
+    .hd-pos {
+        font-size: 2.2em;
+        padding: 0 15px;
     }
 }
 @media(max-width: 576px) {  
