--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -313,6 +313,27 @@ body {
     background: #000000;
     width: 100%;
     overflow: hidden;
+    position: relative;
+}
+.logos-wrap:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    background-image: linear-gradient(to right, #000000 18%, rgba(0, 0, 0, 0) 100%);
+    width: 150px;
+    z-index: 1;
+}
+.logos-wrap:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-image: linear-gradient(to left, #000000 18%, rgba(0, 0, 0, 0) 100%);
+    width: 150px;
+    z-index: 1;
 }
 .about-wrap {
     background-color: #181616;
@@ -391,6 +412,11 @@ body {
 .sm-title {
     font-size: 1.2em;
     color: #fff;
+}
+.featured-vehicles-wrap .sm-title {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 .font-bold {
     font-weight: bold;
@@ -509,12 +535,13 @@ body {
     overflow: hidden;
     background-color: #000;
 }
-.video-container {
+/* .video-container {
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
     overflow: hidden;
     max-width: 100%;
+    background: #000; 
 }
 .video-container iframe {
     position: absolute;
@@ -522,7 +549,24 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-}
+    border: 0;
+    width: 100%;
+} */
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+  }
+  
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 .video-container:before {
     content: '';
     position: absolute;
@@ -648,9 +692,9 @@ body {
     z-index: 2;
     overflow: hidden; 
 }
-.hm-about-block > .scrollmagic-pin-spacer {
+/* .hm-about-block > .scrollmagic-pin-spacer {
     padding-bottom: 0 !important;
-}
+} */
 .panel-inner {
     height: 100vh;
     width: 100vw;
@@ -669,4 +713,8 @@ body {
 .custom-form .text-danger {
     font-size: 13px;
     margin-top: 4px;
+}
+.fb-logo img {
+    max-width: 150px;
+    max-height: 78px;
 }
